High Quality DoF broken #46128

Closed
opened 2015-09-16 17:55:19 +02:00 by Matt Heimlich · 12 comments

System Information
Win 7 x64
GTX780 Ti

Blender Version
Broken: Master as of 9/16/2015
Worked: 2.75a

Short description of error
HQ DoF is completely broken. Buffer never clears, f-stop changes passepartout, all kinds of weird stuff.

Exact steps for others to reproduce the error
Works with any file, no special .blend needed. Just enable High Quality under camera settings. Confirmed with hackerman- in IRC.

**System Information** Win 7 x64 GTX780 Ti **Blender Version** Broken: Master as of 9/16/2015 Worked: 2.75a **Short description of error** HQ DoF is completely broken. Buffer never clears, f-stop changes passepartout, all kinds of weird stuff. **Exact steps for others to reproduce the error** Works with any file, no special .blend needed. Just enable High Quality under camera settings. Confirmed with hackerman- in IRC.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Matt Heimlich 2015-09-16 17:55:19 +02:00
Author

Added subscriber: @MatthewHeimlich

Added subscriber: @MatthewHeimlich

#46140 was marked as duplicate of this issue

#46140 was marked as duplicate of this issue
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Oh yeah, indeed :/

Oh yeah, indeed :/
Member

It's a bit serious, setting to Unbreak Now!

It's a bit serious, setting to *Unbreak Now!*

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey, this is caused by Opensubiv assumming it's always active when a geometry shader is active. Will you fix or should I fix?

@Sergey, this is caused by Opensubiv assumming it's always active when a geometry shader is active. Will you fix or should I fix?

@Psy-Fi, got fix for that which i'm testing atm. Not really ideal, but more global changes i'd rather do after rc1 tagging (and also would need to discuss one thing with you then).

@Psy-Fi, got fix for that which i'm testing atm. Not really ideal, but more global changes i'd rather do after rc1 tagging (and also would need to discuss one thing with you then).

This issue was referenced by 1fa3bd6148

This issue was referenced by 1fa3bd6148e9909527cf0882b201147fa819d835

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @lardigblender

Added subscriber: @lardigblender
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46128
No description provided.